compiler/actonc/test/typeerrors/ex6.act
(a,b) = (1,3,5)

